# weatherstation-api

./: .dockerignore  .env.dist  Cargo.toml  Dockerfile  docker-compose.yml  http-client.env.json  manual-tests.http
.github/: dependabot.yml
.github/workflows/: deliver.yml  testing.yml
docker/: entrypoint.sh
docker/dev-initdb.d/: 00-create-user-and-db copy.sh  10-enable-uuid.sh
migrations/2021-03-11-194145_create_measurements/: down.sql  up.sql
migrations/2021-03-16-132315_create_devices/: up.sql
migrations/2021-03-16-133412_add_location_column_to_measurements/: down.sql  up.sql
migrations/2021-03-26-160347_change_timestamp_columns/: down.sql  up.sql
migrations/2022-05-02-191758_manage_updated_at/: down.sql  up.sql
src/: config.rs  database.rs  lib.rs  models.rs  queries.rs  routes.rs  schema.rs  utils.rs
src/models/: device.rs  measurement.rs  mod.rs  stats.rs
src/sql/: stats.sql
