[package]
name = "weatherstation-api"
version = "0.2.0"
authors = ["Wesley Klop <wesley19097@gmail.com>"]
edition = "2021"
default-run = "server"

[dependencies]
color-eyre = { version = "0.5", default-features = false }
dotenv = "0.15.0"
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
