[package]
name = "weatherstation-api"
version = "0.2.0"
authors = ["Wesley Klop <wesley19097@gmail.com>"]
edition = "2021"
default-run = "server"

[dependencies]
color-eyre = { version = "0.5", default-features = false }
dotenv = "0.15.0"
uuid = { version = "1.0.0", features = ["v4"] }
chrono = "0.4.19"


[dependencies.diesel]
version = "2.0.0-rc.0"
features = ["postgres", "chrono", "uuid"]
