[package]
name = "weatherstation-api"
version = "0.1.0"
authors = ["Wesley Klop <wesley19097@gmail.com>"]
edition = "2018"
default-run = "server"

[dependencies]
actix-web = "^3.3"
actix-web-httpauth = "^0.5"
chrono = { version = "^0.4.22", features = ["serde"] }
diesel = { version = "^1.4.8", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
r2d2 = "^0.8.10"
rand = "^0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^1.7", features = ["serde", "v4"] }